# InkBrief

./: .agent-workflow  .gitignore  .gitmodules  Dockerfile  README.md  README.zh-CN.md  REVIEW-REPORT.md  pipeline.py  pyproject.toml  start.bat  stop.bat
.github/workflows/: ci.yml  docker.yml
android/: local.properties.example  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/inkbrief/: DetailActivity.java  MainActivity.java  SettingsActivity.java
android/app/src/main/java/dev/inkbrief/data/: Card.java  CardRepository.java  InkBriefDatabase.java
android/app/src/main/java/dev/inkbrief/sync/: SyncClient.java
android/app/src/main/java/dev/inkbrief/ui/: CardView.java
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
backend/: .env.example  README.md  api.py  app.py  bandit.py  config.py  database.py  deck.py  models.py  pyproject.toml  requirements.txt  tag_engine.py  webhook_handler.py  weekly.py
backend/tests/: test_core.py
references/: tag-rules.json
tests/: test_backend_core.py
